feat: add volume redis
